# macho-loader-rs

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
.github/workflows/: tester.yml
cxx_libtlv/: Makefile  thread_local_helpers.s  thread_local_variables.c
example/: Makefile
example/incs/: spawn.h  vector.h
example/libvector/: Makefile
example/libvector/incs/: vector.h
example/libvector/srcs/: vector.c
example/srcs/: main.c  spawn.c
libs/debug_println/: Cargo.toml
libs/debug_println/src/: lib.rs
libs/jump/: Cargo.toml
libs/jump/src/: lib.rs
libs/kernutils/: Cargo.toml
libs/kernutils/src/: lib.rs
libs/macho/: Cargo.toml
libs/macho/src/: bindings.rs  container.rs  lib.rs
libs/ptrauth/: Cargo.toml
libs/ptrauth/src/: lib.rs
src/: lib.rs  mapping.rs  parsing.rs  relocations.rs
test/: run.sh  tester.sh
test/binaries/00_asm/: hello_world.c
test/binaries/01_write/: build.sh  hello_world.c
test/binaries/02_fprintf/: build.sh  hello_world.c
test/binaries/03_ptrauth_got/: build.sh  hello_world.c
test/binaries/04_static_string/: hello_world.c
test/binaries/05_weak_function/: build.sh  hello_world.c
test/binaries/06_with_constructor/: hello_world.c
test/binaries/08_weak_data/: hello_world.c
test/binaries/09_fn_pointer_got/: hello_world.c
test/infiles/: asm.in  cxx_static_init.in  fn_pointer_got.in  fprintf.in  interposed.in  objective_c.in  ptrauth.in  reexport_dylib.in  rpath_dylib.in  rust.in  rust_2.in  static_string.in  swift.in  tls.in  weak_data.in  weak_function.in  with_constructor.in  write.in
(+17 files in other folders)
